# tcg-fetch

./: .gitignore  Cargo.toml  README.md  prep_dataset.py  prep_n_upload_dataset.py  upload_dataset.py
src/: augment.rs  augmentation.rs  main.rs  utils.rs
src/tcg/: ga.rs  mod.rs  mtg.rs
src/utils/: files.rs  http.rs  images.rs  mod.rs
