[package]
name = "tcg-fetch"
version = "0.1.1"
edition = "2021"
default-run = "tcg-fetch"

[[bin]]
name = "tcg-fetch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
indicatif = "0.17"
image = { version = "0.25", features = ["jpeg", "png"] }
rand = "0.9"
rayon = "1.8"
